[tool.poetry]
name = "vigilant_crypto_media"
version = "0.1.0"
description = ""
authors = ["Vikramaditya Gaonkar <vikram@dataroots.io>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.2.4"
matplotlib = "^3.4.2"
plotly = "^4.14.3"
chart-studio = "^1.1.0"
Jinja2 = "^3.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
